--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,14 @@
     ],
     "require": {
         "php": ">=5.6.0",
-        "ext-pdo_mysql": "*",
         "starlit/utils": "~0.1",
-        "symfony/http-foundation": "~3.0",
-        "symfony/routing": "~3.0",
-        "filp/whoops": "~2.0",
-        "monolog/monolog": "~1.0"
+        "symfony/http-foundation": "^3.0",
+        "symfony/routing": "^3.0",
+        "filp/whoops": "^2.0",
+        "monolog/monolog": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.0",
+        "phpunit/phpunit": "^5.7",
         "starlit/paginator": "~0.1"
     },
     "autoload": {
