--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,14 @@
     "require": {
         "php": ">=7.1.0",
         "psr/container": "^1.0",
-        "starlit/utils": "~0.1",
+        "starlit/utils": "^1.1",
         "symfony/http-foundation": "^4.0",
         "symfony/routing": "^4.0",
         "filp/whoops": "^2.0",
         "monolog/monolog": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
+        "phpunit/phpunit": "^7.5",
         "starlit/paginator": "~0.2"
     },
     "autoload": {
