--- a/composer.json
+++ b/composer.json
@@ -11,17 +11,17 @@
         }
     ],
     "require": {
-        "php": ">=7.1.0",
+        "php": ">=8.0",
         "psr/container": "^1.0",
         "starlit/utils": "^1.1",
-        "symfony/http-foundation": "^4.0",
+        "symfony/http-foundation": "^6.0",
         "symfony/routing": "^4.0",
         "filp/whoops": "^2.0",
         "monolog/monolog": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5",
-        "starlit/paginator": "~0.2"
+        "phpunit/phpunit": "^9.5",
+        "starlit/paginator": "dev-feature/php-version-upgrade"
     },
     "autoload": {
         "psr-4": {"Starlit\\App\\": "src"}
