--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "starlit/paginator": "dev-feature/php-version-upgrade"
+        "starlit/paginator": "^1.1.0"
     },
     "autoload": {
         "psr-4": {"Starlit\\App\\": "src"}
